--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>        
 
+        <!-- Plotly JS -->
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
         <!-- Custom JavaScript-->
         <script src = "{{ url_for('static', filename='js/app.js') }}" defer></script>
     </head>
@@ -21,6 +24,24 @@
                 <div class='col-md-12'>
                     <h1>Fantasy Stats</h1>
                     <h4>The '85 Bears</h4>
+                    <div class="row">
+                        <div class="col-md-2">
+                          <div class="well">
+                            <h5>Test Dropdown</h5>
+                            <!-- YOU WILL NEED TO ADD AN onchange EVENT TO THE DROP DOWN! -->
+                            <select id="selDataset" onchange='optionChanged(this.value)' ></select>
+                            <!----onchange='optionChanged(this.value)'-->
+                          </div>
+                        </div>
+                        <div class="col-md-10">
+                            <div id="comparison-chart"></div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col-md-12'>
+                            <div id='position-bar'></div>
+                        </div>
+                    </div>
                     <table class='table table-striped table-hover' id='stats-table'>
                         <thead id='stats-thead'>
                         </thead>  
