--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,19 @@
                             <div id='position-bar'></div>
                         </div>
                     </div>
+                    <div class='row'>
+      
+                    </div>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-12'>
+                    <div id='points_by_pos'></div>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-12'>
+                    <H1>SAMPLE TABLE</H1>
                     <table class='table table-striped table-hover' id='stats-table'>
                         <thead id='stats-thead'>
                         </thead>  
@@ -50,6 +63,7 @@
                     </table>
                 </div>
             </div>
+
         </div>
     </body>    
 </html>
