--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,8 @@
     
 
     <body>
+
+        <!---
         <div class='container'>
 
             <div class='row'>
@@ -70,7 +72,7 @@
                 <div class="col-md-2">
                     <div class="well">
                     <h5>Season</h5>
-                    <!-- YOU WILL NEED TO ADD AN onchange EVENT TO THE DROP DOWN! -->
+                    YOU WILL NEED TO ADD AN onchange EVENT TO THE DROP DOWN! 
                     <select id="selDataset" onchange='optionChanged(this.value)' ></select>
                     </div>
                 </div>
@@ -110,6 +112,210 @@
                 </div>
             </div>
                 
+        </div>
+         -->
+
+
+
+
+         <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+                         
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="navbar-toggler-icon"></span>
+                        </button> <a class="navbar-brand" href="#">Brand</a>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                     <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                     <a class="nav-link" href="#">Link</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                     <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                         <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="dropdown-divider">
+                                        </div> <a class="dropdown-item" href="#">Separated link</a>
+                                    </div>
+                                </li>
+                            </ul>
+                            <form class="form-inline">
+                                <input class="form-control mr-sm-2" type="text" /> 
+                                <button class="btn btn-primary my-2 my-sm-0" type="submit">
+                                    Search
+                                </button>
+                            </form>
+                            <ul class="navbar-nav ml-md-auto">
+                                <li class="nav-item active">
+                                     <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                     <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                                         <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="dropdown-divider">
+                                        </div> <a class="dropdown-item" href="#">Separated link</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                    <div class="jumbotron">
+                        <h2>
+                            NFL Fantasy Football Insider
+                        </h2>
+                        <p>
+                            Description if we want
+                        </p>
+                        <p>
+                            <a class="btn btn-primary btn-large" href="#">Learn more</a>
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form role="form" class="form-inline">
+                                <div class="form-group">
+                                     
+                                    <label for="exampleInputEmail1">
+                                        Player #1
+                                    </label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" />
+                                </div>
+                                <div class="form-group">
+                                     
+                                    <label for="exampleInputPassword1">
+                                        Player #2
+                                    </label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1" />
+                                </div>
+                                <div class="form-group">
+                                     
+                                    <label for="exampleInputFile">
+                                        Player input
+                                    </label>
+                                    <input type="file" class="form-control-file" id="exampleInputFile" />
+                                    <p class="help-block">
+                                        Example block-level help text here.
+                                    </p>
+                                </div>
+                                <div class="checkbox">
+                                     
+                                    <label>
+                                        <input type="checkbox" /> Check me out
+                                    </label>
+                                </div> 
+                                <button type="submit" class="btn btn-primary">
+                                    Search
+                                </button>
+                            </form>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <table class="table">
+                                        <thead>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>
+                                Line Graphs
+                            </h3>
+                            <p>
+                                Description if we want
+                            </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div id="avg_fpts_line"></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div id="pos_count_line"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>
+                               Scatter Plots
+                            </h3>
+                            <p>
+                                Description if we want
+                            </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div id="qb_scatter"></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div id="rb_scatter"></div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div id="wr_scatter"></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div id="te_scatter"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h3>
+                                        Leaderboard
+                                    </h3>
+                                </div>
+                            </div>
+                            <table class='table table-striped table-hover' id='stats-table'>
+                                <thead id='stats-thead'>
+                                </thead>  
+                                <tbody id='stats-tbody'>
+                                </tbody>
+                            </table>
+                            <nav>
+                                <ul class="pagination">
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">Previous</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">1</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">2</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">3</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">4</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">5</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">Next</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>    
 </html>
