--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"defer></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"defer></script>   
-            <link href='bootstrap.min.css' rel='stylesheet'/>
+            <!--<link href='bootstrap.min.css' rel='stylesheet'/>-->
+            <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 
     
             <!-- Custom CSS and JS -->
@@ -32,14 +33,18 @@
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" class="external">
             <!-- Google Fonts Roboto -->
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" class="external">
-            <!-- Bootstrap core CSS -->
-            <link rel="stylesheet" href="css/bootstrap.min.css" class="external">
-            <!-- Material Design Bootstrap -->
-            <link rel="stylesheet" href="css/mdb.min.css" class="external">
-            <!-- Your custom styles (optional) -->
-            <link rel="stylesheet" href="css/style.css" class="external">
-            <!-- MDBootstrap Datatables  -->
-            <link href="css/addons/datatables.min.css" class="external" rel="stylesheet">  
+            <!-- Bootstrap core CSS 
+            <link rel="stylesheet" href="css/bootstrap.min.css" class="external">-->
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" class="external">
+            <!-- Material Design Bootstrap 
+            <link rel="stylesheet" href="css/mdb.min.css" class="external">-->
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" class="external">
+            <!-- Your custom styles (optional) 
+            <link rel="stylesheet" href="css/style.css" class="external">-->
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" class="external">
+            <!-- MDBootstrap Datatables  
+            <link href="css/addons/datatables.min.css" class="external" rel="stylesheet">  -->
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/addons/datatables.min.css') }}" class="external">
 
             <!-- jQuery 
             <script type="text/javascript" src="js/jquery.min.js"defer></script>-->
