--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,8 @@
              <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="carousel slide" id="carousel-30070">
-                            <ol class="carousel-indicators">
+                        <div class="carousel slide" id="carousel-30070" style="max-height: 600px">
+                            <ol class="carousel-indicators" style="max-height: 500px">
                                 <li data-slide-to="0" data-target="#carousel-30070" class="active">
                                 </li>
                                 <li data-slide-to="1" data-target="#carousel-30070">
@@ -53,7 +53,7 @@
                                 <li data-slide-to="2" data-target="#carousel-30070">
                                 </li>
                             </ol>
-                            <div class="carousel-inner">
+                            <div class="carousel-inner" style="max-height: 5000px">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.thesportsgeek.com/wp-content/uploads/2020/07/fantasy-football-logo-helmet-825x400.jpg" />
                                     <div class="carousel-caption">
@@ -65,7 +65,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" style="max-height: 500px">
                                     <img class="d-block w-100" alt="Carousel Bootstrap Second" src="http://1.bp.blogspot.com/-pG69aHK2Cw0/T-ywWtmBskI/AAAAAAAAAZ0/_ei-uV2zjGQ/s1600/fbtcovers1.jpg" />
                                     <div class="carousel-caption">
                                         <h4>
